# akonadi-googledata-resource

./: CMakeLists.txt  ChangeLog  GoogleData.ui  Messages.sh  README  dlgGoogleDataConf.cpp  gcalresource.cpp  gcalresource.h  gcalresource.kcfg  googledata.h  googledataresource.cpp  googledataresource.desktop  googledataresource.h  settings.kcfgc
calendar/: CMakeLists.txt  GoogleData.ui  Messages.sh  gcalresource.cpp  gcalresource.desktop  gcalresource.h  settings.kcfgc
cmake/modules/: FindLibGCal.cmake  FindLibGcal.cmake
contacts/: CMakeLists.txt  GoogleData.ui  Messages.sh  dlgGoogleDataConf.h  googledataresource.cpp  googledataresource.desktop  googledataresource.h  googledataresource.kcfg
shared/: dlgGoogleDataConf.cpp  dlgGoogleDataConf.h  googledata.cpp  googledata.h
